[tool.poetry]
name = "fishing_net"
version = "0.1.0"
description = ""
authors = ["karlrobeck <karlalferezfx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
metatrader5 = "^5.0.4424"
numpy = "1.26.4"
pyjwt = "^2.8.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
